# scry-tui-file-browser

./: Cargo.toml  README.md
src/: app.rs  args.rs  classify.rs  clipboard.rs  config.rs  connection.rs  entry.rs  external_help.rs  file_info.rs  fuzzy.rs  help.rs  legend.rs  main.rs  open.rs  query.rs  remote_index.rs  scan.rs  search_index.rs  session.rs  source.rs  ssh.rs  themes.rs  ui.rs
