[package]
name = "scry"
version = "0.3.4"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
bytes = "1.12.1"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
futures-util = "0.3.32"
openssh = { version = "0.11.6", features = ["native-mux"] }
openssh-sftp-client = { version = "0.15.7", features = ["openssh"] }
ratatui = "0.30.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "process", "io-util"] }
users = "0.11.0"
walkdir = "2.5.0"
